refactor code in index.html for responsiveness

--- a/triangle_quiz.css
+++ b/triangle_quiz.css
@@ -79,3 +79,70 @@ body
         margin-top: 2rem;
         position: relative;
     }
+
+
+input
+{
+    display: block;
+    width: 12rem;
+    height: 2rem;
+    border-radius: 1rem;
+    text-decoration: none;
+}
+
+.is-triangle-btn,.back-btn
+{
+    border-radius: 1rem;
+    width: 8rem;
+    height:2rem;
+    background-color: darkblue;
+    color: white;
+    border:none;
+    margin-top: 0rem;
+    margin-left: 35rem;
+    margin-right:10px;
+    top: 10rem;
+    position: relative;
+}
+
+.istriangle
+{
+    position: relative;
+	top: 10rem;
+	bottom: 0;
+    left:auto;
+	margin-left: auto;
+	margin-right: auto;
+    display: block;
+    width: 15rem;
+}
+
+.output
+{
+    border-radius: 1rem;
+    width: 10rem;
+    height:2rem;
+    background-color: darkblue;
+    color: white;
+    border:none;
+    margin-top: 1rem;
+    margin-left: 35rem;
+    margin-right:10px;
+    top: 10rem;
+    position: relative;
+    text-align: center;
+    padding-top: 1rem;
+}
+    @media only screen and (max-width: 800px) {
+        body {
+            background-image: url("/images/bgTrianglesMob.jpg");
+            background-repeat: no-repeat;
+        background-position: center;
+    background-size: 100% 100%;
+    min-height: 100vh;
+    margin: 0;
+
+        }
+        
+
+      }
