--- a/areaOfTriangle.css
+++ b/areaOfTriangle.css
@@ -74,3 +74,10 @@ input
     padding-top: 1rem;
     border-radius: 1rem;
 }
+
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url("/images/bgTrianglesMob.jpg");
+    }
+  }
