--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -125,3 +125,9 @@ body
     position:absolute;
   
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-image: url("/images/bgTrianglesMob.jpg");
+    }
+  }
