--- a/istriangle.css
+++ b/istriangle.css
@@ -1,3 +1,8 @@
+:root{
+    --primary-color: #1E3A8A;
+    --secondary-color: #3B82F6;
+    --off-white: #60A5FA;
+}
 .isTriangle
 {
     display: block;
@@ -12,6 +17,7 @@ body
     background-size: 100% 100%;
     min-height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
 .heading
@@ -22,93 +28,98 @@ body
     position: relative;
     font-family: "Lucida Console", "Courier New", monospace;
 }
-.selectionbox
-{
-    width: 25%;
-    height: 350px;
-    top: 20rem;
-    background-size: 30px 80px;
-    margin: auto;
-    color: black;
-    position: relative;
-}
-.row
-{
-    
-    display: inline-block;
-    margin-bottom: 0rem;
-    position: relative;
-    margin-top: 0rem;
-}
-.row a
-{
-    
-margin-left: 0.5rem;
-background-color: #00B7EB;
-padding-top: 5rem;
-text-align: center;
-margin-top: 0rem;
-max-width: 150px;
-font-size: 1.5rem;
-position: relative;
-color: #606060;
-font-family: "Lucida Console", "Courier New", monospace;
-}
 
-.row a:nth-child(2) {
-   float:right;
-   background-color: #0892D0;
-   position: relative;
-   margin-top: 0%;
-   width: 200px;
-   height:100px;
+
+ 
+  .selectionbox
+  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top:16rem;
   }
 
-  .row a:nth-child(1) {
-    
-    background-color:  #0892D0;
-    float:left;
-    position: relative;
-    width: 200px;
-   height:100px;
-}
-
-input
-{
-    display: block;
-    width: 12rem;
-    height: 2rem;
-    border-radius: 1rem;
-    text-decoration: none;
-}
-
-.is-triangle-btn,.back-btn
-{
-    border-radius: 1rem;
-    width: 8rem;
-    height:2rem;
-    background-color: darkblue;
-    color: white;
-    border:none;
+  .row
+  {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column; 
+    margin-bottom: 0rem;
     margin-top: 0rem;
-    margin-left: 35rem;
-    margin-right:10px;
+    position: relative;
+  }
+
+  .row a {
+
+    width: 100%;
+    margin-right: 1rem;
+    margin-bottom: -1rem;
+    margin-top: 0rem;
+    padding: 1rem;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column; 
+  }
+
+  .row .cell
+  {
+      background-color:  lightskyblue;
+    margin-left: 1rem;
+    margin-right:0rem;
+    margin-top:0rem;
+    margin-bottom:0rem;
+    padding: 2rem;
+    justify-content: center;
+    align-content: center;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 1.5rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 12rem;
+    height: 10rem;
+  }
+
+  input
+  {
+      display: block;
+      width: 12rem;
+      height: 2rem;
+      border-radius: 1rem;
+      text-decoration: none;
+  }
+  
+  .is-triangle-btn,.back-btn
+  {
+      border-radius: 1rem;
+      width: 8rem;
+      height:2rem;
+      background-color: darkblue;
+      color: white;
+      border:none;
+      margin-top: 0rem;
+      margin-left: 35rem;
+      margin-right:10px;
+      top: 10rem;
+      position: relative;
+  }
+  
+  .istriangle
+  {
+      position: relative;
     top: 10rem;
-    position: relative;
-}
-
-.istriangle
-{
-    position: relative;
-	top: 10rem;
-	bottom: 0;
-    left:auto;
-	margin-left: auto;
-	margin-right: auto;
-    display: block;
-    width: 15rem;
-}
-
+    bottom: 0;
+      left:auto;
+    margin-left: auto;
+    margin-right: auto;
+      display: block;
+      width: 15rem;
+  }
+  
 .output
 {
     border-radius: 1rem;
@@ -125,3 +136,9 @@ input
     text-align: center;
     padding-top: 1rem;
 }
+
+  @media only screen and (max-width: 600px) {
+    body {
+        background-image: url("/images/bgTrianglesMob.jpg");
+    }
+  }
