--- a/istriangle.css
+++ b/istriangle.css
@@ -1,144 +1,169 @@
+
+
 :root{
-    --primary-color: #1E3A8A;
-    --secondary-color: #3B82F6;
-    --off-white: #60A5FA;
+  --primary-color: #1E3A8A;
+  --secondary-color: #3B82F6;
+  --off-white: #60A5FA;
 }
-.isTriangle
+.triangleForm
+{
+  display: block;
+  margin-top: 2rem;
+}
+
+
+.heading
+{
+  text-align: center;
+  font-size: 4rem;
+  top: 16rem;
+  position: relative;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
+
+
+.selectionbox
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top:16rem;
+}
+
+.row
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column; 
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+  position: relative;
+}
+
+.row a {
+
+  width: 100%;
+  margin-right: 1rem;
+  margin-bottom: -1rem;
+  margin-top: 0rem;
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column; 
+}
+
+.row .cell
+{
+    background-color:  lightskyblue;
+  margin-left: 1rem;
+  margin-right:0rem;
+  margin-top:0rem;
+  margin-bottom:0rem;
+  padding: 2rem;
+  justify-content: center;
+  align-content: center;
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-size: 1.5rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 12rem;
+  height: 10rem;
+}
+
+input
 {
     display: block;
-    margin-top: 2rem;
+    width: 12rem;
+    height: 2rem;
+    border-radius: 1rem;
+    text-decoration: none;
+}
+
+.is-triangle-btn
+{
+    border-radius: 1rem;
+    width: 8rem;
+    height:2rem;
+    background-color: darkblue;
+    color: white;
+    border:none;
+    margin-top: 0rem;
+ /**   margin-left: 35rem; **/
+    margin-right:10px;
+    top: 5rem;
+    position: relative;
+}
+.back-btn
+{
+  border-radius: 1rem;
+  width: 8rem;
+  height:2rem;
+  margin-top: 4rem;
+  background-color: darkblue;
+  color: white;
+  border:none;
+  margin-top: 0rem;
+  margin-left: 0rem;
+  margin-right:10px;
+  top: 0rem;
+  position: relative;
+}
+.triangleForm , .istriangle
+
+{
+    position: relative;
+  top: 4rem;
+  bottom: 0;
+    left:auto;
+  margin-left: auto;
+  margin-right: auto;
+    display: block;
+    width: 15rem;
+}
+
+.output
+{
+  border-radius: 1rem;
+  width: 10rem;
+  height:2rem;
+  background-color: darkblue;
+  color: white;
+  border:none;
+  margin-top: 0rem;
+ /** margin-left: 35rem; **/
+  margin-right:10px;
+  top: 6rem;
+  position: relative;
+  text-align: center;
+  padding-top: 1rem;
 }
 
 body
 {
-    background-image: url("/images/bgTriangles.jpg");
+  background-image: url("/images/bgTriangles.jpg"); 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  min-height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
+
+
+@media only screen and (max-width: 640px) {
+  body {
+    background-image: url("/images/bgTrianglesMob.jpg"); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
     min-height: 100vh;
     margin: 0;
     overflow: hidden;
+  }
 }
-
-.heading
-{
-    text-align: center;
-    font-size: 4rem;
-    top: 16rem;
-    position: relative;
-    font-family: "Lucida Console", "Courier New", monospace;
-}
-
-
- 
-  .selectionbox
-  {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top:16rem;
-  }
-
-  .row
-  {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column; 
-    margin-bottom: 0rem;
-    margin-top: 0rem;
-    position: relative;
-  }
-
-  .row a {
-
-    width: 100%;
-    margin-right: 1rem;
-    margin-bottom: -1rem;
-    margin-top: 0rem;
-    padding: 1rem;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column; 
-  }
-
-  .row .cell
-  {
-      background-color:  lightskyblue;
-    margin-left: 1rem;
-    margin-right:0rem;
-    margin-top:0rem;
-    margin-bottom:0rem;
-    padding: 2rem;
-    justify-content: center;
-    align-content: center;
-    font-family: "Lucida Console", "Courier New", monospace;
-    font-size: 1.5rem;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 12rem;
-    height: 10rem;
-  }
-
-  input
-  {
-      display: block;
-      width: 12rem;
-      height: 2rem;
-      border-radius: 1rem;
-      text-decoration: none;
-  }
-  
-  .is-triangle-btn,.back-btn
-  {
-      border-radius: 1rem;
-      width: 8rem;
-      height:2rem;
-      background-color: darkblue;
-      color: white;
-      border:none;
-      margin-top: 0rem;
-      margin-left: 35rem;
-      margin-right:10px;
-      top: 10rem;
-      position: relative;
-  }
-  
-  .istriangle
-  {
-      position: relative;
-    top: 10rem;
-    bottom: 0;
-      left:auto;
-    margin-left: auto;
-    margin-right: auto;
-      display: block;
-      width: 15rem;
-  }
-  
-.output
-{
-    border-radius: 1rem;
-    width: 10rem;
-    height:2rem;
-    background-color: darkblue;
-    color: white;
-    border:none;
-    margin-top: 1rem;
-    margin-left: 35rem;
-    margin-right:10px;
-    top: 10rem;
-    position: relative;
-    text-align: center;
-    padding-top: 1rem;
-}
-
-  @media only screen and (max-width: 600px) {
-    body {
-        background-image: url("/images/bgTrianglesMob.jpg");
-    }
-  }
